tests/good/20_function_call.src
# Test: Function call without arguments
int helper() {
    return 42;
}

void main() {
    print_int(helper());
}
