tests/bad/20_func_redefinition.src
# Test: Function redefinition
int func() {
    return 1;
}

int func() {  # Function redefinition
    return 2;
}

void main() {
    return func();
}
